--- a/src/Components/Component/About/About2/About2.css
+++ b/src/Components/Component/About/About2/About2.css
@@ -1,6 +1,14 @@
 .about-section2{
     /* background: url('../../../../assets/img/service/service-bg-2.jpg'); */
 }
+.about-section2 .author-icon .icon{
+    background: #002c89;
+    color: white;
+    padding: 20px 25px;
+    border-radius: 50%;
+
+}
+
 
 .about-image-items{
     
@@ -8,6 +16,18 @@
 
 .about-image-1{
    
+}
+
+.sr-about1-top p{
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.sr-about1-top {
+    margin-bottom: 10px;
+}
+.sr-about1-top span{
+    margin-bottom: 5px;
 }
 
 .about-section2 .left{
@@ -38,3 +58,12 @@
 .about-section2-img{
     width: 100%;
 }
+
+.about-wrapper.style-2 .about-image-items .counter-shape {
+    background-color: var(--theme);
+    bottom: 0;
+    left: 3%;
+}
+
+
+
