--- a/src/Components/Component/Service/Service1/Service1.css
+++ b/src/Components/Component/Service/Service1/Service1.css
@@ -1,5 +1,6 @@
 .service-section-3{
     /* background-image: url('assets/img/service/service-bg-3.jpg'); */
+    background: #ebebeb;
 }
 
 .service-card-items .service-content .icon{
