--- a/src/Components/Component/About/About1/About1.css
+++ b/src/Components/Component/About/About1/About1.css
@@ -2,6 +2,10 @@
     opacity: 0;
     transition: all 0.3s;
 }
+.about-section .section-title p{
+    font-size: 20px;
+    font-weight: 600;
+}
 .about-section.active{
     opacity: 1;
     transition: all 0.3s;
