--- a/src/Components/Component/Achivement/Achivement.css
+++ b/src/Components/Component/Achivement/Achivement.css
@@ -17,6 +17,7 @@
 .achivement-bg{
     background-color: rgba(0, 0, 0, 0.475);
     border-radius: 5px;
+    height: 100%;
 }
 
 .achievement-section-3 i{
