--- a/src/assets/css/WebDev.css
+++ b/src/assets/css/WebDev.css
@@ -57,3 +57,17 @@
 .webdevelopment-section5 .contact-now a, .webdevelopment-section5 .call-now a{
    color: white;
 }
+
+.industry-card:hover{
+    background-color: #18185e;
+}
+.industry-card:hover p{
+    color: white;
+}
+.industry-card:hover i{
+    color: white;
+}
+
+.industry-card p{
+    transition: none;
+}
