--- a/src/assets/css/CRP.css
+++ b/src/assets/css/CRP.css
@@ -1,5 +1,5 @@
 .sr-crp-nit-crp .sr-crp-nit-heading-1 th {
-    background: #000f33;
+    background: #243a82;
     color: white;
   }
   
@@ -70,7 +70,7 @@
   }
   
   .sr-crp-nit-crp .sr-crp-nit-heading-3 td {
-    background: #000f33;
+    background: #243a82;
     text-align: center;
     padding: 20px;
   }
