--- a/src/assets/css/Seo.css
+++ b/src/assets/css/Seo.css
@@ -1,5 +1,5 @@
 .sr-seo-nit-seo .sr-seo-nit-heading-1 th {
-  background: #000f33;
+  background: #243a82;
 }
 
 .sr-seo-nit-seo .sr-seo-nit-heading-1 .sr-seo-nit-heading {
@@ -10,7 +10,7 @@
 }
 
 .sr-seo-nit-seo .sr-seo-nit-heading-1 .value {
-  background: #3cafed;
+  background: #2198d5;
   text-align: center;
   padding: 30px;
 }
@@ -53,7 +53,7 @@
 }
 
 .sr-seo-nit-seo .sr-seo-nit-heading-2 td {
-  background: #17c1f6;
+  background: #2198d5;
 }
 .sr-seo-nit-seo .sr-seo-nit-heading-2 td .sr-seo-nit-title {
   font-size: 16px;
@@ -69,7 +69,7 @@
 }
 
 .sr-seo-nit-seo .sr-seo-nit-heading-3 td {
-  background: #000f33;
+  background: #243a82;
   text-align: center;
   padding: 20px;
 }
