--- a/src/assets/css/PPC.css
+++ b/src/assets/css/PPC.css
@@ -1,5 +1,5 @@
 .sr-ppc-nit-ppc .sr-ppc-nit-heading-1 th {
-    background: #000f33;
+    background: #243a82;
   }
   
   .sr-ppc-nit-ppc .sr-ppc-nit-heading-1 .sr-ppc-nit-heading {
@@ -52,7 +52,7 @@
   }
   
   .sr-ppc-nit-ppc .sr-ppc-nit-heading-2 td {
-    background: #17c1f6;
+    background: #2198d5;
   }
   .sr-ppc-nit-ppc .sr-ppc-nit-heading-2 td .sr-ppc-nit-title {
     font-size: 16px;
@@ -68,7 +68,7 @@
   }
   
   .sr-ppc-nit-ppc .sr-ppc-nit-heading-3 td {
-    background: #000f33;
+    background: #243a82;
     text-align: center;
     padding: 20px;
   }
