--- a/src/assets/css/Smo.css
+++ b/src/assets/css/Smo.css
@@ -1,5 +1,5 @@
 .sr-smo-nit-smo .sr-smo-nit-heading-1 th {
-    background: #000f33;
+    background: #243a82;
   }
   
   .sr-smo-nit-smo .sr-smo-nit-heading-1 .sr-smo-nit-heading {
@@ -47,7 +47,7 @@
   }
   
   .sr-smo-nit-smo .sr-smo-nit-heading-2 td {
-    background: #17c1f6;
+    background: #2198d5;
   }
   .sr-smo-nit-smo .sr-smo-nit-heading-2 td .sr-smo-nit-title {
     font-size: 16px;
@@ -63,7 +63,7 @@
   }
   
   .sr-smo-nit-smo .sr-smo-nit-heading-3 td {
-    background: #000f33;
+    background: #243a82;
     text-align: center;
     padding: 20px;
   }
